# swagger/swagger.yml
@@ -971,35 +971,6 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/controllers.respData'
-  /gmail/auth:
-    get:
-      tags:
-      - gmail
-      description: |-
-        callback of gmail
-        <br>
-      operationId: GmailController.Callback
-      consumes:
-      - application/json
-      produces:
-      - application/json
-  /gmail/authcodeurl:
-    get:
-      tags:
-      - gmail
-      description: |-
-        get auth code url
-        <br>
-      operationId: GmailController.AuthCodeURL
-      consumes:
-      - application/json
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/controllers.authCodeURL'
   /individual-signing/{link_id}:
     get:
       tags:
@@ -1170,28 +1141,6 @@ paths:
           schema:
             $ref: '#/definitions/controllers.respData'
   /link/{link_id}:
-    put:
-      tags:
-      - link
-      description: |-
-        update link email
-        <br>
-      operationId: LinkController.UpdateLinkEmail
-      consumes:
-      - application/json
-      produces:
-      - application/json
-      parameters:
-      - in: path
-        name: link_id
-        description: link id
-        required: true
-        type: string
-      responses:
-        "202":
-          description: ""
-          schema:
-            $ref: '#/definitions/controllers.respData'
     delete:
       tags:
       - link
